# langchain-rag

./: README.md  ingestion.py  ingestion_csv.py  ingestion_json.py  main.py  output.txt  pyproject.toml  write.py
Docs/: rag_it_help_openai_langchain.json  rag_it_help_openai_rag.md
